# asio-training

./: .clang-format  CMakeLists.txt  conanfile.txt
Client/: CMakeLists.txt  Client.hpp  MainClient  MainClient.cpp
Network/: CMakeLists.txt
Network/Include/Network/: Common.hpp  Connection.hpp  Message.hpp  Primitives.hpp  SafeQueue.hpp
Server/: CMakeLists.txt  MainServer.cpp  Server.hpp  UserRequestHandlers.hpp  main
Test/: CMakeLists.txt  MainTest.cpp
